Added description of new mute-group limit warnings.

--- a/tex/seq64_kudos.tex
+++ b/tex/seq64_kudos.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-08-29
-% \update      2017-05-29
+% \update      2017-08-20
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -36,6 +36,8 @@
          a number of bug reports and a new logo.
       \item \textsl{jean-emmanuel}:
          scrollable main-window support, other features and reports.
+      \item \textsl{Olivier Humbert (trebmuh)}:
+         French translation for the desktop files.
    \end{itemize}
 
    Also some bug-reporters and testers:
@@ -53,6 +55,12 @@
          a request for an LV2 plugin version, a possible future feature.
       \item \textsl{georgkrause}:
          a number of helpful bug reports.
+      \item \textsl{pixelrust}:
+         reports of issues with "fruity" interaction.
+      \item \textsl{simonvanderveldt}:
+         issues with window sizing and more.
+      \item \textsl{milkmiruku}:
+         mainwids issues and ideas.
          
    \end{itemize}
 
