--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-04-29
+% \update      2017-11-05
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -91,6 +91,12 @@
    \emph{Summary of MIDI Messages}
    \url{https://www.midi.org/specifications/item/table-1-summary-of-midi-message#2}
    Year unknown.
+
+   \bibitem{nanobasket}
+   Roy Vegard
+   \emph{Configurator software for the Korg nanoSERIES of MIDI controllers}
+   \url{https://github.com/royvegard/Nano-Basket}
+   2015.
 
    \bibitem{portmidi}
    PortMedia team
