--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-11-06
+% \update      2017-09-30
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -442,9 +442,12 @@
          the pattern or pattern subsection, that item can be moved
          horizontally, as long as their is room.  Or course, left-clicking
          inside the item will also cause it to show as selected.
-         One can also highlight a pattern section (making it gray), then click
-         the \texttt{p} key to enter "paint" mode, and move the pattern left or
-         right with the arrow keys.
+         One can also highlight a pattern section (making it gray),
+         then click the \texttt{p} key to enter "paint" mode, and move the
+         pattern left or right with the arrow keys.
+         In the near future, movement of selected trigger segments will not
+         require the paint mode to be active just to move the segments left or
+         right.
       \item \textbf{Expansion}.
          \index{song editor!section expansion}
          If, instead of grabbing the section length handle, one grabs inside
@@ -499,6 +502,11 @@
    While in the paint mode, one can add pattern clips with the left mouse
    button, via click or drag, and one can highlight a pattern clip and move it
    with the left and right arrow keys.
+
+   In the near future, movement of selected trigger segments will not
+   require the paint mode to be active just to move the segments left or
+   right.
+
    To get out of the paint mode, press the
    \index{keys!x}
    \texttt{x} key while in the sequence editor, to "x-scape" (get it?  get it?)
