--- a/tex/seq64_kudos.tex
+++ b/tex/seq64_kudos.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-08-29
-% \update      2017-08-20
+% \update      2017-11-05
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -38,29 +38,35 @@
          scrollable main-window support, other features and reports.
       \item \textsl{Olivier Humbert (trebmuh)}:
          French translation for the desktop files.
+      \item \textsl{Oli Kester}:
+         The creator of \textsl{Kepler34}, from which we are getting
+         clues on porting the user interface to Qt 5 and Windows.
    \end{itemize}
 
    Also some bug-reporters and testers:
 
    \begin{itemize}
-      \item \textsl{gimmeapill}:
-         testing, bug-reports, and, um, "marketing".
-      \item \textsl{muranyia}:
-         feature request for numbered piano keys and bug-reports.
       \item \textsl{F0rth}:
          a request for scripting support, a possible future feature.
-      \item \textsl{triss}:
-         a request for OSC support, a possible future feature.
-      \item \textsl{ssj71}:
-         a request for an LV2 plugin version, a possible future feature.
+      \item \textsl{gimmeapill}:
+         testing, bug-reports, and, um, "marketing".
       \item \textsl{georgkrause}:
          a number of helpful bug reports.
+      \item \textsl{goguetchapuisb}:
+         found that Seq64 native JACK did not properly handle the copious
+         Active Sensing messages emitted by Yamaha keyboards.
+      \item \textsl{milkmiruku}:
+         mainwids issues and ideas.
+      \item \textsl{muranyia}:
+         feature request for numbered piano keys and bug-reports.
       \item \textsl{pixelrust}:
          reports of issues with "fruity" interaction.
       \item \textsl{simonvanderveldt}:
          issues with window sizing and more.
-      \item \textsl{milkmiruku}:
-         mainwids issues and ideas.
+      \item \textsl{ssj71}:
+         a request for an LV2 plugin version, a possible future feature.
+      \item \textsl{triss}:
+         a request for OSC support, a possible future feature.
          
    \end{itemize}
 
