--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-08-09
+% \update      2017-11-25
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -33,7 +33,8 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=1.00]{menu/menu_file.png}
+%  \includegraphics[scale=1.00]{menu/menu_file.png}
+   \includegraphics[scale=1.00]{new/menu_file.png}
    \caption{Sequencer64 File Menu Items}
    \label{fig:seq64_menu_file_items}
 \end{figure}
@@ -41,6 +42,7 @@
    \begin{enumber}
       \item \textbf{New}
       \item \textbf{Open...}
+      \item \textbf{Recent MIDI files...}
       \item \textbf{Save}
       \item \textbf{Save As...}
       \item \textbf{Import MIDI...}
@@ -76,6 +78,13 @@
    If unsaved changes are pending, the user will (usually)
    be prompted to save the changes.
    When in doubt, save!  If still in doubt, keep backups of your tunes!
+
+\subsubsection{Menu / File / Recent MIDI Files}
+\label{subsubsec:seq64_menu_file_recent}
+
+   Provides a list of the last few MIDI files that were created or opened.
+   This list is saved in the \texttt{[recent-files]} section of the
+   "rc" configuration file.
 
 \subsubsection{Menu / File / Save and Save As}
 \label{subsubsec:menu_file_open_save_as}
@@ -271,7 +280,8 @@
    This dialog allows one to select which sequence gets the MIDI
    clock, which incoming MIDI events control the sequencer, what keys are
    mapped to functions, how the mouse works, and some JACK parameters.
-   Note that there is now an extra tab-page for \textbf{Ext Keys}.
+   Note that there is now an extra tab-page for \textbf{Ext Keys}, to support
+   even more keystroke control of \textsl{Sequencer64}.
 
 \begin{figure}[H]
    \centering 
@@ -628,8 +638,11 @@
    \centering 
 %  \includegraphics[scale=0.75]{menu/menu_file_options_keyboard.png}
 %  \includegraphics[scale=0.75]{menu/menu_file_options_keyboard-0_9_12.png}
+%
+%  WAY OUT OF DATE!!!!!
+%
    \includegraphics[scale=0.75]{new/menu_file_options_keyboard.png}
-   \caption{File / Options / Keyboard (Condensed View)}
+   \caption{File / Options / Keyboard}
    \label{fig:seq64_menu_file_options_keyboard}
 \end{figure}
 
@@ -637,9 +650,25 @@
    dialog, just the categories.  Some items are discussed in other parts of
    this manual.
 
+   There are a few things to note in the \texttt{[keyboard-control]} section.
+   First, it is laid out like the main patterns panel, in an 8 x 4 grid.
+   The keys in there correspond directly to the patterns panel slot, and the
+   conventional keyboard layout is shown.
+   Second, if one is looking for more keys to map to other functions, the
+   conventional layout keeps open the following keys:
+   \texttt{9 o l 0 p}.
+
+   The \texttt{[mute-group]} section is laid out in a similar manner, except
+   that the upper-case versions of the keys are used.  Additional keys
+   are available for other functions:
+   \texttt{( O L ) P}.
+
+   Currently, one must be very carefully about assigning the same key to
+   different functions.  Confusion will ensue!
+
    \index{new!pause}
    \index{pause}
-   If the application has been built with the pause option, an
+   If the application has been built with the "pause" option, an
    additional key definition is shown for the Pause key.
    By default, the Pause key is the period (".").  An old version of
    the "rc" file is automatically fixed to include this new option.
@@ -727,6 +756,8 @@
          Key: \index{keys!esc} \textbf{Escape}.
       \item \textbf{Pause}. (new)
          Key: \index{keys!period} \textbf{period}.
+      \item \textbf{Slot Shift}.
+         Key: \index{keys!slash} \textbf{slash}.
       \item \textbf{Snapshot 1}.
          Key: \index{keys!alt-l} \textbf{Alt\_L}.
       \item \textbf{Snapshot 2}.
@@ -756,6 +787,12 @@
    various keys that can be used, especially keys used with the
    \texttt{Ctrl} key or other modifier keys.
 
+   \index{slot-shift}
+   \index{keys!slot-shift}
+   The \textsl{slot shift} key is useful when using pattern grids larger
+   than 8 x 4 patterns.  Pressing the slot-shift key basically adds 32 to the
+   pattern number of the slot-key that is pressed.
+
    \index{snapshot}
    \index{keys!snapshot}
    A \textsl{snapshot} is a briefly preserved state of the patterns.
@@ -782,8 +819,13 @@
    down the queue button the whole time.  First, press the keep-queue key
    (defined in \textbf{File / Options / Keyboard / Keep queue}).  Now, hitting
    any of the shortcut keys, no matter how many, sets up the corresponding
-   pattern slot to be queued.  This mode is disabled by hitting the
-   "queue" key (any currently active queues remain active until finished).
+   pattern slot to be queued.  Also, in keep-queue mode, clicking on the
+   pattern slot will queue the pattern.  The keep-queue mode is disabled by
+   hitting the "queue" key (any currently active queues remain active until
+   finished).
+
+   Be sure to note the new option, "one-shot queue", in the extended-keys
+   section.
 
    \itempar{Sequence toggle keys}{keyboard!sequence toggle keys}
    Each of these keys toggles the playing/muting of one of the 32
@@ -870,7 +912,8 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{menu/menu_file_options_ext_keys_condensed.png}
+%  \includegraphics[scale=0.75]{menu/menu_file_options_ext_keys_condensed.png}
+   \includegraphics[scale=0.75]{new/menu_file_options_ext_keys_condensed.png}
    \caption{File / Options / Ext Keys (Condensed View)}
    \label{fig:seq64_menu_file_options_ext_keys}
 \end{figure}
@@ -881,7 +924,7 @@
    \itempar{Ext Keys}{keyboard!extended keys}
    This block of fields in the \textbf{Options / Ext Keys} tab
    provides shortcut keys for more operations of \textsl{Sequencer64}, many of
-   them ported from \textsl{Seq32}.
+   them ported from \textsl{Seq32} or \textsl{Kepler34}.
    The default keys are shown.
 
    \begin{enumber}
@@ -903,6 +946,11 @@
          Key: \index{keys!F8} \textbf{F8}.
       \item \textbf{Tap BPM}.
          Key: \index{keys!F9} \textbf{F9}.
+      \item \textbf{Song Record}
+         Key: \index{keys!P} \textbf{P}.
+      \item \textbf{One-shot Queue}
+         Key: \index{keys!p} \textbf{p}.  This new feature allows
+         one-shot queuing of a pattern.
    \end{enumber}
 
    Most of these extended keys implement operations performed with button
@@ -915,7 +963,7 @@
    support the new keys.  Some of the new features can be enabled or disabled
    during the build-configure step, and one's favorite distro may decide to
    disable some features.  In this case, although the values will still be
-   stored in the "rc" file, they will be disabled in this tab:
+   stored in the "rc" file, they will be disabled or missing in this tab:
 
 \begin{figure}[H]
    \centering 
@@ -1157,7 +1205,7 @@
    This tab sets up options for JACK synchronization, if \textsl{Sequencer64}
    was built with JACK support.  (Why wouldn't it be?)
    It now also supports native JACK MIDI.
-   This tab also sets up options for using LASH session management, if
+   This tab also sets up options for using LASH session management, \textsl{if}
    \textsl{Sequencer64} was build with LASH support.
 
 \begin{figure}[H]
